--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -20,33 +20,27 @@ jobs:
       #     repository: maitho/node-with-realm/noderealm
       #     tag_with_ref: true
 
-      #PUSH TO DOCKERHUB   
-      - name: Push to GitHub Packages
-        id: docker_build
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          registry: docker.io
-          repository: thige25/noderealm
-          tag_with_ref: true
-          
-          
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v1 
+      # #PUSH TO DOCKERHUB   
+      # - name: Push to GitHub Packages
+      #   id: docker_build
+      #   uses: docker/build-push-action@v1
       #   with:
       #     username: ${{ secrets.DOCKERHUB_USERNAME }}
       #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-     
-      # - name: Build and push
-      #   id: docker_build
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     push: true
-      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/noderealm:latest
-      #     # build-args: |
-      #     #   arg1=value1
-      #     #   arg2=value2
+      #     registry: docker.io
+      #     repository: thige25/noderealm
+      #     tag_with_ref: true
+          
+      # TO GHCR.IO
+      - name: Push to GitHub Packages
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.CR_PAT }}
+          registry: ghcr.io
+          repository: maitho/noderealm
+          tag_with_ref: true     
+          
       
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}    
